Lowered the padding on the nav-menu links down to 14px. This actually looks even better than 17px. The padding wasn't doing very much in the first place, and cutting it down makes the (now wider) nav-menu look less cramped, and avoids pressing to tightly against the user-links.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,7 +177,7 @@ ul#nav-menu li a {
 	height: inherit;
 	line-height: 29px;
 	outline: none;
-	padding: 0 17px;
+	padding: 0 14px;
 }
 #user-links {
 	background: #77ae51 url(header-tab-shadow.png) repeat-x bottom left;
